[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tuya_mower"
authors = [{ name = "Dávid Benko", email = "davidbenko@davidbenko.dev" }]
description = "Simple library to locally control Tuya-based robotic lawn mowers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation",
    "Topic :: Utilities",
    "Topic :: Internet",
]
license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dbnk0/tuya_mower"
Issues = "https://github.com/dbnk0/tuya_mower/issues"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements.dev.txt"] }

[tool.ruff]
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Missing trailing comma (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "INP001", # Implicit namespace package
    "S101",   # Use of assert detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"
